<resources>
    <string name="app_name">E-Voting</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_pemilu">Pilihan Umum</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_nim">Nim</string>
    <string name="title_alamat">Alamat</string>
    <string name="title_jenis_kelamin">Jenis kelamin</string>
    <string name="title_jurusan">Jurusan</string>
</resources>