<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:padding="50dp"
            android:background="@drawable/background_primary">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/white"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_nim"
                android:textColor="@color/fourth"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/profile_nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="15dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_jurusan"
                android:textColor="@color/fourth"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/profile_jurusan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="15dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_jenis_kelamin"
                android:textColor="@color/fourth"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/profile_jenis_kelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="15dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_alamat"
                android:textColor="@color/fourth"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/profile_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="15dp"/>
            <Button
                android:id="@+id/btn_logout"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/logout"
                android:layout_gravity="end"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>